Beta Stage | Fixes: [Client] Email, Account overflow, Fonts, Validate Form Warning [Server] Handle username exists when register

--- a/client/renderer/assets/css/styles.css
+++ b/client/renderer/assets/css/styles.css
@@ -203,7 +203,7 @@ strong {
   border-radius: 50%;
 }
 .account-icon {
-  font-size: 2.2rem;
+  font-size: 2.3rem;
   border-radius: 50%;
   color: var(--color-black)
 }
@@ -211,14 +211,17 @@ strong {
   margin-left: 8px;
 }
 .account-info__name {
-  font-weight: 700;
+  font-weight: 600;
   color: var(--color-black);
   font-size: 1.7rem;
+  line-height: 1.7;
+  max-width: calc(360px - 100px);
 }
 .account-info__email {
   font-size: 1.4rem;
   line-height: 2;
-  color: var(--color-gray)
+  color: var(--color-gray);
+  max-width: calc(360px - 100px);
 }
 
 .btn {
@@ -523,6 +526,7 @@ strong {
 }
 .note-title {
   font-weight: 500;
+  line-height: 1.6;
 }
 
 .note-content {
